--- a/org.eclipse.emf.emfstore.releng/.settings/org.eclipse.core.resources.prefs
+++ b/org.eclipse.emf.emfstore.releng/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,7 @@
-#Mon Jul 11 16:02:40 CEST 2011
+#Tue Feb 14 10:53:15 CET 2012
 eclipse.preferences.version=1
 encoding//model/org.eclipse.emf.cdo.defs.ecorediag=UTF-8
-encoding/buckminster.cspex=UTF-8
+encoding/buckminster.mspec=UTF-8
 encoding/build.cquery=UTF-8
 encoding/build.mspec=UTF-8
 encoding/build.rmap=UTF-8
-encoding/local.mspec=UTF-8
