--- a/org.eclipse.emf.emfstore.releng/build.properties
+++ b/org.eclipse.emf.emfstore.releng/build.properties
@@ -41,15 +41,7 @@ signing.type=eclipse.local
 ###########################################################################
 
 jars.compile.order = .
-source.. = src/
-output.. = bin/
-bin.includes = .,\
-               META-INF/
-src.includes = buckminster.cspex,\
-               build.cquery,\
-               build.mspec,\
+bin.includes = .
+src.includes = build.cquery,\
                build.rmap,\
-               build.xml,\
-               hudson/,\
-               local.mspec,\
-               xsl/
+               buckminster.mspec
