configured features and categories

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -1,7 +1,6 @@
 category.id.org.eclipse.emf.emfstore=EMFStore
-category.description.org.eclipse.emf.emfstore=EMFStore
-category.members.org.eclipse.emf.emfstore= org.eclipse.emf.emfstore.site
+category.default=org.eclipse.emf.emfstore
+category.description.org.eclipse.emf.emfstore=Core Features of EMFStore, a model repository for EMF.
+#category.members.org.eclipse.emf.emfstore=org.eclipse.emf.emfstore.common.feature, org.eclipse.emf.emfstore.server.feature, org.eclipse.emf.emfstore.client.feature, org.eclipse.emf.emfstore.client.ui.feature, org.eclipse.emf.emfstore.perspective.feature, org.eclipse.emf.emfstore.ecore.feature 
 
-bin.includes = feature.xml,\
-               feature.properties,\
-               category.xml
+bin.includes = feature.xml
