--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -1,6 +1,9 @@
 category.id.org.eclipse.emf.emfstore=EMFStore
 category.default=org.eclipse.emf.emfstore
 category.description.org.eclipse.emf.emfstore=Core Features of EMFStore, a model repository for EMF.
-#category.members.org.eclipse.emf.emfstore=org.eclipse.emf.emfstore.common.feature, org.eclipse.emf.emfstore.server.feature, org.eclipse.emf.emfstore.client.feature, org.eclipse.emf.emfstore.client.ui.feature, org.eclipse.emf.emfstore.perspective.feature, org.eclipse.emf.emfstore.ecore.feature 
+
+category.id.org.eclipse.emf.ecp=EMFClient Platform
+category.description.org.eclipse.emf.ecp=Core Features of EMFClient Platform.
+category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, org.eclipse.emf.ecp.editor.feature, org.eclipse.emf.ecp.navigator.feature, org.eclipse.emf.ecp.navigatoreditorbridge.feature, org.eclipse.emf.ecp.validation.feature
 
 bin.includes = feature.xml
