added missing features and categories

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -1,9 +1,13 @@
-category.id.org.eclipse.emf.emfstore=EMFStore
-category.default=org.eclipse.emf.emfstore
-category.description.org.eclipse.emf.emfstore=Core Features of EMFStore, a model repository for EMF.
+category.id.org.eclipse.emf.emfstore.core=EMFStore Core Features
+category.description.org.eclipse.emf.emfstore.core=Core Features of EMFStore, a model repository for EMF.
+category.default=org.eclipse.emf.emfstore.core
+
+category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
+category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
+category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, org.eclipse.emf.emfstore.migration.edapt.feature, org.eclipse.emf.emfstore.client.transaction.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform
-category.description.org.eclipse.emf.ecp=Core Features of EMFClient Platform.
+category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
 category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, org.eclipse.emf.ecp.editor.feature, org.eclipse.emf.ecp.navigator.feature, org.eclipse.emf.ecp.navigatoreditorbridge.feature, org.eclipse.emf.ecp.validation.feature
 
 bin.includes = feature.xml
