--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -4,7 +4,7 @@ category.default=org.eclipse.emf.emfstore.core
 
 category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
-category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, org.eclipse.emf.emfstore.migration.edapt.feature, org.eclipse.emf.emfstore.client.transaction.feature
+category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, org.eclipse.emf.emfstore.client.transaction.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
