added SDK category; using explicit listing instead of catch-all category for EMFStore Core; minor changes to buckminster.properties

--- a/org.eclipse.emf.emfstore.releng/buckminster.properties
+++ b/org.eclipse.emf.emfstore.releng/buckminster.properties
@@ -6,7 +6,11 @@ buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
 
 # How .qualifier in versions should be replaced
 qualifier.replacement.*=generator:lastRevision
+generator.lastModified.format='v'yyyyMMdd-HHmm
 
 target.os=*
 target.ws=*
 target.arch=*
+
+cbi.include.source = true
+signing.type=eclipse.local
