--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -1,13 +1,42 @@
 category.id.org.eclipse.emf.emfstore.core=EMFStore Core Features
 category.description.org.eclipse.emf.emfstore.core=Core Features of EMFStore, a model repository for EMF.
-category.default=org.eclipse.emf.emfstore.core
-
+category.members.org.eclipse.emf.emfstore.core=org.eclipse.emf.emfstore.common.feature, \
+                                               org.eclipse.emf.emfstore.server.feature, \
+                                               org.eclipse.emf.emfstore.client.feature, \
+                                               org.eclipse.emf.emfstore.client.ui.feature, \
+                                               org.eclipse.emf.emfstore.perspective.feature, \
+                                               org.eclipse.emf.emfstore.ecore.feature, \
+                                               org.eclipse.emf.emfstore.ecp.feature
+                                               
 category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
-category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, org.eclipse.emf.emfstore.client.transaction.feature
+category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, \
+                                              org.eclipse.emf.emfstore.client.transaction.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
-category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, org.eclipse.emf.ecp.editor.feature, org.eclipse.emf.ecp.navigator.feature, org.eclipse.emf.ecp.navigatoreditorbridge.feature, org.eclipse.emf.ecp.validation.feature
+category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, \
+                                     org.eclipse.emf.ecp.editor.feature, \
+                                     org.eclipse.emf.ecp.navigator.feature, \
+                                     org.eclipse.emf.ecp.navigatoreditorbridge.feature, \
+                                     org.eclipse.emf.ecp.validation.feature
+
+
+category.id.org.eclipse.emf.emfstore.source=EMFStore/ECP SDK
+category.description.org.eclipse.emf.emfstore.source=Source features.
+category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.ecp.common.source.feature, \
+                                                 org.eclipse.emf.ecp.editor.source.feature, \
+                                                 org.eclipse.emf.ecp.navigator.source.feature, \
+                                                 org.eclipse.emf.ecp.navigatoreditorbridge.source.feature, \
+                                                 org.eclipse.emf.ecp.validation.source.feature, \
+                                                 org.eclipse.emf.emfstore.backchannel.source.feature, \
+                                                 org.eclipse.emf.emfstore.client.transaction.source.feature, \
+                                                 org.eclipse.emf.emfstore.common.source.feature, \
+                                                 org.eclipse.emf.emfstore.server.source.feature, \
+                                                 org.eclipse.emf.emfstore.client.source.feature, \
+                                                 org.eclipse.emf.emfstore.client.ui.source.feature, \
+                                                 org.eclipse.emf.emfstore.perspective.source.feature, \
+                                                 org.eclipse.emf.emfstore.ecore.source.feature, \
+                                                 org.eclipse.emf.emfstore.ecp.source.feature
 
 bin.includes = feature.xml
