added perspective bin to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /org.eclipse.emf.emfstore.client.test/bin
 /org.eclipse.emf.emfstore.client.model.edit/bin
 /org.eclipse.emf.emfstore.client/bin
+/org.eclipse.emf.emfstore.perspective/bin
