added separate category for ECP Source Features

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -22,14 +22,9 @@ category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, \
                                      org.eclipse.emf.ecp.validation.feature
 
 
-category.id.org.eclipse.emf.emfstore.source=EMFStore/ECP SDK
-category.description.org.eclipse.emf.emfstore.source=Source features.
-category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.ecp.common.source.feature, \
-                                                 org.eclipse.emf.ecp.editor.source.feature, \
-                                                 org.eclipse.emf.ecp.navigator.source.feature, \
-                                                 org.eclipse.emf.ecp.navigatoreditorbridge.source.feature, \
-                                                 org.eclipse.emf.ecp.validation.source.feature, \
-                                                 org.eclipse.emf.emfstore.backchannel.source.feature, \
+category.id.org.eclipse.emf.emfstore.source=EMFStore Sources
+category.description.org.eclipse.emf.emfstore.source=EMFStore Source Features.
+category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.backchannel.source.feature, \
                                                  org.eclipse.emf.emfstore.client.transaction.source.feature, \
                                                  org.eclipse.emf.emfstore.common.source.feature, \
                                                  org.eclipse.emf.emfstore.server.source.feature, \
@@ -38,5 +33,13 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.ecp.common.sour
                                                  org.eclipse.emf.emfstore.perspective.source.feature, \
                                                  org.eclipse.emf.emfstore.ecore.source.feature, \
                                                  org.eclipse.emf.emfstore.ecp.source.feature
+
+category.id.org.eclipse.emf.emfstore.source=EMFClient Sources
+category.description.org.eclipse.emf.emfstore.source=EMFClient Source Features.
+category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.ecp.common.source.feature, \
+                                                 org.eclipse.emf.ecp.editor.source.feature, \
+                                                 org.eclipse.emf.ecp.navigator.source.feature, \
+                                                 org.eclipse.emf.ecp.navigatoreditorbridge.source.feature, \
+                                                 org.eclipse.emf.ecp.validation.source.feature                                             
 
 bin.includes = feature.xml
