cleaned up; moved buckminster.properties from releng to site; activated qualifier substitution

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -5,12 +5,13 @@ buckminster.output.root=${user.home}/emfstore/buckminster/output
 buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
 
 # How .qualifier in versions should be replaced
-qualifier.replacement.*=generator:lastRevision
+#qualifier.replacement.*=generator:lastRevision
+qualifier.replacement.*=generator:lastModified
 generator.lastModified.format='v'yyyyMMdd-HHmm
 
 target.os=*
 target.ws=*
 target.arch=*
 
-cbi.include.source = true
+cbi.include.source=true
 signing.type=eclipse.local
