simulating milestone build: setting qualifier replacement to fixed string instead of generated timestamp

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -5,9 +5,10 @@ buckminster.output.root=${user.home}/emfstore/buckminster/output
 buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
 
 # How .qualifier in versions should be replaced
-#qualifier.replacement.*=generator:lastRevision
-qualifier.replacement.*=generator:lastModified
-generator.lastModified.format='v'yyyyMMdd-HHmm
+#qualifier=none
+qualifier.replacement.*=M1234
+#qualifier.replacement.*=generator:lastModified
+#generator.lastModified.format='v'yyyyMMdd-HHmm
 
 target.os=*
 target.ws=*
