--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -10,9 +10,13 @@ qualifier.replacement.*=M1234
 #qualifier.replacement.*=generator:lastModified
 #generator.lastModified.format='v'yyyyMMdd-HHmm
 
+# include all possible targets
 target.os=*
 target.ws=*
 target.arch=*
 
+# generate source bundles (default = true)
 cbi.include.source=true
+
+# requires to be run by user with signing privileges
 signing.type=eclipse.local
