changed root of path to buckminsters output and temp directory to hudsons workspace

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -1,8 +1,10 @@
 # Where all the output should go
-buckminster.output.root=${user.home}/emfstore/buckminster/output
+#buckminster.output.root=${user.home}/emfstore/buckminster/output
+buckminster.output.root=${workspace.root}/buckminster.output
 
 # Where the temp files should go
-buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
+#buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
+buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced
 #qualifier=none
