added (Incubation) to feature name; turned feature version suffix off

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -22,3 +22,8 @@ cbi.include.source=true
 
 # requires to be run by user with signing privileges
 signing.type=eclipse.local
+
+# When version suffixes are turned on, a feature version will have the form major.minor.micro.qualifier-suffix.   
+# The suffix is in effect the sum of the version qualifiers of all the features and plug-ins included by the feature.  
+# This means that when one of the included plug-ins increments its version, then the version of the feature will automatically increment as well.
+generateFeatureVersionSuffix=false
