removed version-suffix generator switch since it does not work; added edapt-feature to categories (not to site-feature though); added additional category description; fixed ECP source-features

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -1,4 +1,4 @@
-category.id.org.eclipse.emf.emfstore.core=EMFStore Core Features
+category.id.org.eclipse.emf.emfstore.core=EMFStore Core Features (Install all to get started)
 category.description.org.eclipse.emf.emfstore.core=Core Features of EMFStore, a model repository for EMF.
 category.members.org.eclipse.emf.emfstore.core=org.eclipse.emf.emfstore.common.feature, \
                                                org.eclipse.emf.emfstore.server.feature, \
@@ -11,9 +11,10 @@ category.members.org.eclipse.emf.emfstore.core=org.eclipse.emf.emfstore.common.f
 category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
 category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, \
-                                              org.eclipse.emf.emfstore.client.transaction.feature
+                                              org.eclipse.emf.emfstore.client.transaction.feature, \
+                                              org.eclipse.emf.emfstore.migration.edapt.feature
 
-category.id.org.eclipse.emf.ecp=EMFClient Platform
+category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
 category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, \
                                      org.eclipse.emf.ecp.editor.feature, \
@@ -32,11 +33,12 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.backch
                                                  org.eclipse.emf.emfstore.client.ui.source.feature, \
                                                  org.eclipse.emf.emfstore.perspective.source.feature, \
                                                  org.eclipse.emf.emfstore.ecore.source.feature, \
-                                                 org.eclipse.emf.emfstore.ecp.source.feature
+                                                 org.eclipse.emf.emfstore.ecp.source.feature, \
+                                                 org.eclipse.emf.emfstore.migration.edapt.source.feature
 
-category.id.org.eclipse.emf.emfstore.source=EMFClient Sources
-category.description.org.eclipse.emf.emfstore.source=EMFClient Source Features.
-category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.ecp.common.source.feature, \
+category.id.org.eclipse.emf.ecp.source=EMFClient Sources
+category.description.org.eclipse.emf.ecp.source=EMFClient Source Features.
+category.members.org.eclipse.emf.ecp.source=org.eclipse.emf.ecp.common.source.feature, \
                                                  org.eclipse.emf.ecp.editor.source.feature, \
                                                  org.eclipse.emf.ecp.navigator.source.feature, \
                                                  org.eclipse.emf.ecp.navigatoreditorbridge.source.feature, \
