--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -7,10 +7,9 @@ buckminster.output.root=${workspace.root}/buckminster.output
 buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced
-#qualifier=none
-qualifier.replacement.*=M945
-#qualifier.replacement.*=generator:lastModified
-#generator.lastModified.format='v'yyyyMMdd-HHmm
+#qualifier.replacement.*=M945
+qualifier.replacement.*=generator:lastModified
+generator.lastModified.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
