--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -1,15 +1,13 @@
 # Where all the output should go
-#buckminster.output.root=${user.home}/emfstore/buckminster/output
 buckminster.output.root=${workspace.root}/buckminster.output
 
 # Where the temp files should go
-#buckminster.temp.root=${user.home}/emfstore/buckminster/tmp
 buckminster.temp.root=${workspace.root}/buckminster.temp
 
-# How .qualifier in versions should be replaced
-#qualifier.replacement.*=M945
-qualifier.replacement.*=generator:lastModified
-generator.lastModified.format='v'yyyyMMdd-HHmm
+# How .qualifier in versions should be replaced -- do NOT remove comments!
+qualifier.replacement.*=M946
+#qualifier.replacement.*=generator:lastModified
+#generator.lastModified.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
