--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -19,3 +19,7 @@ cbi.include.source=true
 
 # requires to be run by user with signing privileges
 signing.type=eclipse.local
+
+# javadoc
+target.platform=${workspace.root}/_target
+javadoc.output=javadoc/
