--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -5,9 +5,9 @@ buckminster.output.root=${workspace.root}/buckminster.output
 buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
-#qualifier.replacement.*=M946
-qualifier.replacement.*=generator:lastModified
-generator.lastModified.format='v'yyyyMMdd-HHmm
+qualifier.replacement.*=M947
+#qualifier.replacement.*=generator:lastModified
+#generator.lastModified.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
