added localChangePackage attribute to ProjectSpace type

--- a/org.eclipse.emf.emfstore.client.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.client.model.edit/plugin.properties
@@ -101,3 +101,4 @@ _UI_ProjectSpace_waitingUploads_feature = Waiting Uploads
 _UI_ProjectSpace_properties_feature = Properties
 _UI_ProjectSpace_changedSharedProperties_feature = Changed Shared Properties
 _UI_ProjectSpace_workspace_feature = Workspace
+_UI_ProjectSpace_localChangePackage_feature = Local Change Package
