removed backchannel from update-site

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -10,8 +10,7 @@ category.members.org.eclipse.emf.emfstore.core=org.eclipse.emf.emfstore.common.f
                                                
 category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
-category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.backchannel.feature, \
-                                              org.eclipse.emf.emfstore.client.transaction.feature, \
+category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.transaction.feature, \
                                               org.eclipse.emf.emfstore.migration.edapt.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
