removed generated backchannel source feature from update-site

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -24,8 +24,7 @@ category.members.org.eclipse.emf.ecp=org.eclipse.emf.ecp.common.feature, \
 
 category.id.org.eclipse.emf.emfstore.source=EMFStore Sources
 category.description.org.eclipse.emf.emfstore.source=EMFStore Source Features.
-category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.backchannel.source.feature, \
-                                                 org.eclipse.emf.emfstore.client.transaction.source.feature, \
+category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.client.transaction.source.feature, \
                                                  org.eclipse.emf.emfstore.common.source.feature, \
                                                  org.eclipse.emf.emfstore.server.source.feature, \
                                                  org.eclipse.emf.emfstore.client.source.feature, \
