added new EMFStore Example feature to update-site

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -42,4 +42,12 @@ category.members.org.eclipse.emf.ecp.source=org.eclipse.emf.ecp.common.source.fe
                                                  org.eclipse.emf.ecp.navigatoreditorbridge.source.feature, \
                                                  org.eclipse.emf.ecp.validation.source.feature                                             
 
+category.id.org.eclipse.emf.emfstore.examples=EMFStore Code Examples
+category.description.org.eclipse.emf.emfstore.examples=EMFStore Code Examples.
+category.members.org.eclipse.emf.emfstore.examples=org.eclipse.emf.emfstore.example.feature
+
+category.id.org.eclipse.emf.emfstore.examples.source=EMFStore Code Examples Sources
+category.description.org.eclipse.emf.emfstore.examples.source=EMFStore Code Examples Source Features.
+category.members.org.eclipse.emf.emfstore.examples.source=org.eclipse.emf.emfstore.example.source.feature
+
 bin.includes = feature.xml
