--- a/org.eclipse.emf.emfstore.server/.classpath
+++ b/org.eclipse.emf.emfstore.server/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-client-3.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-common-3.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-common-3.1.3.jar" sourcepath="C:/Users/Edgar/Downloads/metus-server-6.0.3.201204301026INTERNAL/metus-server/plugins/org.eclipse.emf.emfstore.server_0.8.9.201203191856/lib/xmlrpc-common-3.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-server-3.1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
