moved variables to build.properties

--- a/org.eclipse.emf.emfstore.releng/build.properties
+++ b/org.eclipse.emf.emfstore.releng/build.properties
@@ -2,3 +2,16 @@ bin.includes = .
 src.includes = build.cquery,\
                build.rmap,\
                buckminster.mspec
+
+platform.version=3.7
+orbit.version=S20110907174232
+eclipse.downloads=http://download.eclipse.org
+resolve.target.platform=true
+
+hudson.git.checkout.base=${workspace.root}/git/org.eclipse.emf
+hudson.git.checkout.emfstore.extension=.emfstore
+hudson.git.checkout.ecp.extension=.ecp
+
+local.git.checkout.base=${user.home}/git/ssh_emf
+local.git.checkout.emfstore.extension=store
+local.git.checkout.ecp.extension=cp
