more flexible configuration of resources

--- a/org.eclipse.emf.emfstore.releng/build.properties
+++ b/org.eclipse.emf.emfstore.releng/build.properties
@@ -8,10 +8,24 @@ orbit.version=S20110907174232
 eclipse.downloads=http://download.eclipse.org
 resolve.target.platform=true
 
+# repositories on build server
 hudson.git.checkout.base=${workspace.root}/git/org.eclipse.emf
-hudson.git.checkout.emfstore.extension=.emfstore
-hudson.git.checkout.ecp.extension=.ecp
 
+hudson.git.checkout.emfstore.core.extension=.emfstore.core
+hudson.git.checkout.emfstore.releng.extension=.emfstore.releng
+hudson.git.checkout.emfstore.other.extension=.emfstore.other
+
+hudson.git.checkout.ecp.core.extension=.ecp.core
+hudson.git.checkout.ecp.releng.extension=.ecp.releng
+hudson.git.checkout.ecp.other.extension=.ecp.other
+
+# repositories on local disk
 local.git.checkout.base=${user.home}/git/ssh_emf
-local.git.checkout.emfstore.extension=store
-local.git.checkout.ecp.extension=cp
+
+local.git.checkout.emfstore.core.extension=store.core
+local.git.checkout.emfstore.releng.extension=store.releng
+local.git.checkout.emfstore.other.extension=store.other
+
+local.git.checkout.ecp.core.extension=cp.core
+local.git.checkout.ecp.releng.extension=cp.releng
+local.git.checkout.ecp.other.extension=cp.other
