added missing target properties

--- a/org.eclipse.emf.emfstore.releng/build.properties
+++ b/org.eclipse.emf.emfstore.releng/build.properties
@@ -3,10 +3,16 @@ src.includes = build.cquery,\
                build.rmap,\
                buckminster.mspec
 
+# buckminster variables
 platform.version=3.7
 orbit.version=S20110907174232
 eclipse.downloads=http://download.eclipse.org
 resolve.target.platform=true
+
+# include all possible targets
+target.os=*
+target.ws=*
+target.arch=*
 
 # repositories on build server
 hudson.git.checkout.base=${workspace.root}/git/org.eclipse.emf
