--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -5,7 +5,7 @@ buckminster.output.root=${workspace.root}/buckminster.output
 buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
-qualifier.replacement.*=M948
+qualifier.replacement.*=0.9.0
 #qualifier.replacement.*=generator:lastModified
 #generator.lastModified.format='v'yyyyMMdd-HHmm
 
