--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -5,11 +5,13 @@ buckminster.output.root=${workspace.root}/buckminster.output
 buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
+# MILESTONE releases
 #qualifier.replacement.*=M947
-# For final releases
-qualifier.replacement.*=none
-#qualifier.replacement.*=generator:lastModified
-#generator.lastModified.format='v'yyyyMMdd-HHmm
+# FINAL releases
+# qualifier.replacement.*=none
+# CONTINOUS releases
+qualifier.replacement.*=generator:lastModified
+generator.lastModified.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
