switched back to continuous versioning naming scheme

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -8,10 +8,10 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 # MILESTONE releases
 #qualifier.replacement.*=M947
 # FINAL releases
-qualifier.replacement.*=
+#qualifier.replacement.*=
 # CONTINOUS releases
-#qualifier.replacement.*=generator:lastModified
-#generator.lastModified.format='v'yyyyMMdd-HHmm
+qualifier.replacement.*=generator:lastModified
+generator.lastModified.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
