--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -47,3 +47,4 @@ category.description.org.eclipse.emf.emfstore.examples=EMFStore Code Examples.
 category.members.org.eclipse.emf.emfstore.examples=org.eclipse.emf.emfstore.example.feature
 
 bin.includes = feature.xml
+buildType=N
