switch from lastModified to buildTimestamp for versioning scheme

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -10,8 +10,8 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 # FINAL releases
 #qualifier.replacement.*=
 # CONTINOUS releases
-qualifier.replacement.*=generator:lastModified
-generator.lastModified.format='v'yyyyMMdd-HHmm
+qualifier.replacement.*=generator:buildTimestamp
+generator.buildTimestamp.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
