--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -201,6 +201,87 @@
            id="org.eclipse.emf.emfstore.client.ui.projectProperties"
            name="Project Properties">
      </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           id="org.eclipse.emf.emfstore.client.ui.commitProject"
+           name="commit">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UpdateProjectHandler"
+           id="org.eclipse.emf.emfstore.client.ui.updateProject"
+           name="update">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UpdateProjectVersionHandler"
+           id="org.eclipse.emf.emfstore.client.ui.updateProjectVersion"
+           name="updateToVersion">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ShareProjectHandler"
+           id="org.eclipse.emf.emfstore.client.ui.shareProject"
+           name="share">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.DeleteProjectHandler"
+           id="org.eclipse.emf.emfstore.client.ui.deleteProject"
+           name="deleteProject">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CreateLocalProjectHandler"
+           id="org.eclipse.emf.emfstore.client.ui.NewLocalProject"
+           name="NewLocalProject">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UndoLastOperationHandler"
+           id="org.eclipse.emf.emfstore.client.ui.undoLastOperation"
+           name="undoLastOperation">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ProjectInfoPropertiesHandler"
+           id="org.eclipse.emf.emfstore.client.ui.repositorybrowser.ProjectProperties"
+           name="ProjectInfo Properties">
+     </command>
+     <command
+           categoryId="org.eclipse.emf.emfstore.client.ui.project"
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RevertHandler"
+           id="org.eclipse.emf.emfstore.client.ui.revert"
+           name="Revert">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CompareProjectsHandler"
+           id="org.eclipse.emf.emfstore.client.ui.compareProjects"
+           name="compareProjects">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CheckoutRevisionHandler"
+           id="org.eclipse.emf.emfstore.client.ui.historybrowserview.checkout"
+           name="CheckoutRevision">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.AddTagHandler"
+           id="org.eclipse.emf.emfstore.client.ui.historybrowserview.addtag"
+           name="AddTag">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RemoveTagHandler"
+           id="org.eclipse.emf.emfstore.client.ui.historybrowserview.removetag"
+           name="RemoveTag">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RevertHandler"
+           id="org.eclipse.emf.emfstore.client.ui.historybrowserview.revert"
+           name="RevertRevision">
+     </command>
+     <command
+           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ForceRevertHandler"
+           id="org.eclipse.emf.emfstore.client.ui.historybrowserview.forcerevert"
+           name="ForceRevertRevision">
+     </command>
   </extension>
   <extension
         point="org.eclipse.ui.menus">
@@ -430,6 +511,7 @@
                 locationURI="popup:org.eclipse.emf.emfstore.client.ui.views.historybrowserview.HistoryBrowserView">
              <command
                    commandId="org.eclipse.emf.emfstore.client.ui.historybrowserview.addtag"
+                   icon="icons/tag_blue_add.png"
                    label="Add tag"
                    style="push"
                    tooltip="Add a new tag to this revision">
@@ -446,6 +528,7 @@
              </command>
              <command
                    commandId="org.eclipse.emf.emfstore.client.ui.historybrowserview.removetag"
+                   icon="icons/tag_blue_delete.png"
                    label="Remove tag"
                    style="push"
                    tooltip="Remove an existing tag">
@@ -609,97 +692,10 @@
      </decorator>
   </extension>
    <extension
-         point="org.eclipse.ui.commands">
-      <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CheckoutRevisionHandler"
-            id="org.eclipse.emf.emfstore.client.ui.historybrowserview.checkout"
-            name="CheckoutRevision">
-      </command>
-      <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.AddTagHandler"
-            id="org.eclipse.emf.emfstore.client.ui.historybrowserview.addtag"
-            name="AddTag">
-      </command>
-      <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RemoveTagHandler"
-            id="org.eclipse.emf.emfstore.client.ui.historybrowserview.removetag"
-            name="RemoveTag">
-      </command>
-      <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RevertHandler"
-            id="org.eclipse.emf.emfstore.client.ui.historybrowserview.revert"
-            name="RevertRevision">
-      </command>
-      <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ForceRevertHandler"
-            id="org.eclipse.emf.emfstore.client.ui.historybrowserview.forcerevert"
-            name="ForceRevertRevision">
-      </command>
-   </extension>
-   <extension
          point="org.eclipse.emf.emfstore.client.sessionprovider">
       <sessionProvider
             class="org.eclipse.emf.emfstore.client.ui.dialogs.login.BasicUISessionProvider">
       </sessionProvider>
-   </extension>
-   <extension
-         point="org.eclipse.ui.commands">
-      <command
-            categoryId="org.eclipse.emf.emfstore.client.ui.project"
-            id="org.eclipse.emf.emfstore.client.ui.commitProject"
-            name="commit">
-      </command>
-         <command
-           categoryId="org.eclipse.emf.emfstore.client.ui.project"
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UpdateProjectHandler"
-           id="org.eclipse.emf.emfstore.client.ui.updateProject"
-           name="update">
-     </command>
-         <command
-               categoryId="org.eclipse.emf.emfstore.client.ui.project"
-               defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UpdateProjectVersionHandler"
-               id="org.eclipse.emf.emfstore.client.ui.updateProjectVersion"
-               name="updateToVersion">
-         </command>
-     <command
-           categoryId="org.eclipse.emf.emfstore.client.ui.project"
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ShareProjectHandler"
-           id="org.eclipse.emf.emfstore.client.ui.shareProject"
-           name="share">
-     </command>
-     <command
-           categoryId="org.eclipse.emf.emfstore.client.ui.project"
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.DeleteProjectHandler"
-           id="org.eclipse.emf.emfstore.client.ui.deleteProject"
-           name="deleteProject">
-     </command>
-     <command
-           categoryId="org.eclipse.emf.emfstore.client.ui.project"
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CreateLocalProjectHandler"
-           id="org.eclipse.emf.emfstore.client.ui.NewLocalProject"
-           name="NewLocalProject">
-     </command>
-     <command
-           categoryId="org.eclipse.emf.emfstore.client.ui.project"
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RevertHandler"
-           id="org.eclipse.emf.emfstore.client.ui.revert"
-           name="Revert">
-     </command>
-     <command
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.UndoLastOperationHandler"
-           id="org.eclipse.emf.emfstore.client.ui.undoLastOperation"
-           name="undoLastOperation">
-     </command>
-     <command
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.ProjectInfoPropertiesHandler"
-           id="org.eclipse.emf.emfstore.client.ui.repositorybrowser.ProjectProperties"
-           name="ProjectInfo Properties">
-     </command>
-     <command
-           defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.CompareProjectsHandler"
-           id="org.eclipse.emf.emfstore.client.ui.compareProjects"
-           name="compareProjects">
-     </command>
    </extension>
    <extension
          point="org.eclipse.emf.emfstore.client.loginObserver">
