added forceCommands option that makes it mandatory to use commands whenever model elements managed by EMFStore are altered.  Usage of this option by default is set to false

--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -83,5 +83,12 @@
            observerAttributeName="exceptionObserver">
      </observer>
   </extension>
+  <extension
+        point="org.eclipse.emf.emfstore.client.recording.options">
+     <RecordingOptions
+           cutOffIncomingCrossReferences="true"
+           forceCommands="true">
+     </RecordingOptions>
+  </extension>
 
 </plugin>
