forceCommands isn't set to true by default anymore in plugin.xml

--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -86,8 +86,7 @@
   <extension
         point="org.eclipse.emf.emfstore.client.recording.options">
      <RecordingOptions
-           cutOffIncomingCrossReferences="true"
-           forceCommands="true">
+           cutOffIncomingCrossReferences="true">
      </RecordingOptions>
   </extension>
 
