configured modelmutator source feature

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -34,7 +34,7 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.client
                                                  org.eclipse.emf.emfstore.ecore.source.feature, \
                                                  org.eclipse.emf.emfstore.ecp.source.feature, \
                                                  org.eclipse.emf.emfstore.migration.edapt.source.feature, \
-                                                 org.eclipse.emf.emfstore.modelmutator.feature
+                                                 org.eclipse.emf.emfstore.modelmutator.source.feature
 
 category.id.org.eclipse.emf.ecp.source=EMFClient Sources
 category.description.org.eclipse.emf.ecp.source=EMFClient Source Features.
