--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -11,8 +11,8 @@ category.members.org.eclipse.emf.emfstore.core=org.eclipse.emf.emfstore.common.f
 category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
 category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.transaction.feature, \
-                                              org.eclipse.emf.emfstore.migration.edapt.feature
-#                                              org.eclipse.emf.emfstore.modelmutator.feature
+                                              org.eclipse.emf.emfstore.migration.edapt.feature, \
+                                              org.eclipse.emf.emfstore.modelmutator.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
@@ -33,8 +33,8 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.client
                                                  org.eclipse.emf.emfstore.perspective.source.feature, \
                                                  org.eclipse.emf.emfstore.ecore.source.feature, \
                                                  org.eclipse.emf.emfstore.ecp.source.feature, \
-                                                 org.eclipse.emf.emfstore.migration.edapt.source.feature
-#                                                 org.eclipse.emf.emfstore.modelmutator.source.feature
+                                                 org.eclipse.emf.emfstore.migration.edapt.source.feature, \
+                                                 org.eclipse.emf.emfstore.modelmutator.source.feature
 
 category.id.org.eclipse.emf.ecp.source=EMFClient Sources
 category.description.org.eclipse.emf.ecp.source=EMFClient Source Features.
