changed login return type from session id to authentication information to login and resolve a user in one step.

--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -424,3 +424,6 @@ _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
 _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
+_UI_AuthenticationInformation_type = Authentication Information
+_UI_AuthenticationInformation_sessionId_feature = Session Id
+_UI_AuthenticationInformation_resolvedACUser_feature = Resolved AC User
