added test feature to site

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -12,6 +12,7 @@ category.id.org.eclipse.emf.emfstore.add=EMFStore Additional Features
 category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore, a model repository for EMF.
 category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.transaction.feature, \
                                               org.eclipse.emf.emfstore.migration.edapt.feature, \
+                                              org.eclipse.emf.emfstore.test.feature, \
                                               org.eclipse.emf.emfstore.modelmutator.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
