--- a/org.eclipse.emf.emfstore.client.test/build.properties
+++ b/org.eclipse.emf.emfstore.client.test/build.properties
@@ -4,12 +4,9 @@
 #
 # $Id$
 
-bin.includes = .,\
-               model/,\
+bin.includes = model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               lib/org.apache.commons.io_1.4.0.v20081110-1000.jar
+               plugin.properties
 jars.compile.order = .
-source.. = src/
 output.. = bin/
