--- a/org.eclipse.emf.emfstore.common/build.properties
+++ b/org.eclipse.emf.emfstore.common/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/commons-io-2.0.1.jar
