added fuzzy feature to build.properties

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -13,7 +13,8 @@ category.description.org.eclipse.emf.emfstore.add=Addtional Features of EMFStore
 category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.transaction.feature, \
                                               org.eclipse.emf.emfstore.migration.edapt.feature, \
                                               org.eclipse.emf.emfstore.test.feature, \
-                                              org.eclipse.emf.emfstore.modelmutator.feature
+                                              org.eclipse.emf.emfstore.modelmutator.feature, \
+                                              org.eclipse.emf.emfstore.fuzzy.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
@@ -35,7 +36,8 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.client
                                                  org.eclipse.emf.emfstore.ecore.source.feature, \
                                                  org.eclipse.emf.emfstore.ecp.source.feature, \
                                                  org.eclipse.emf.emfstore.migration.edapt.source.feature, \
-                                                 org.eclipse.emf.emfstore.modelmutator.source.feature
+                                                 org.eclipse.emf.emfstore.modelmutator.source.feature, \
+                                             	 org.eclipse.emf.emfstore.fuzzy.feature
 
 category.id.org.eclipse.emf.ecp.source=EMFClient Sources
 category.description.org.eclipse.emf.ecp.source=EMFClient Source Features.
