--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -6,12 +6,12 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
 # MILESTONE releases
-qualifier.replacement.*=M1_generator:buildTimestamp
+qualifier.replacement.*=M1
 # FINAL releases
 #qualifier.replacement.*=
 # CONTINOUS releases
 #qualifier.replacement.*=generator:buildTimestamp
-generator.buildTimestamp.format='v'yyyyMMdd-HHmm
+#generator.buildTimestamp.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
