--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -29,8 +29,6 @@
    <extension-point id="org.eclipse.emf.emfstore.client.version" name="Client Version " schema="schema/org.eclipse.emf.emfstore.client.version.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy" name="Conflict Detector Strategy" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictHandler" name="Conflict Handler" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictHandler.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.recording.modificator" name="Operation Modificator" schema="schema/org.eclipse.emf.emfstore.client.recording.modificator.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.recording.modificator.default" name="Options for Default" schema="schema/org.eclipse.emf.emfstore.client.recording.modificator.default.exsd"/>   
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
@@ -86,6 +84,10 @@
            extensionPointName="org.eclipse.emf.emfstore.client.exceptionObserver"
            observerAttributeName="exceptionObserver">
      </observer>
+  </extension>
+  <extension
+        point="org.eclipse.emf.emfstore.client.recording.options">
+     <RecordingOptions></RecordingOptions>
   </extension>
 
 </plugin>
