--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -14,7 +14,8 @@ category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.tr
                                               org.eclipse.emf.emfstore.migration.edapt.feature, \
                                               org.eclipse.emf.emfstore.test.feature, \
                                               org.eclipse.emf.emfstore.modelmutator.feature, \
-                                              org.eclipse.emf.emfstore.fuzzy.feature
+                                              org.eclipse.emf.emfstore.fuzzy.feature, \
+                                              org.eclipse.emf.emfstore.fuzzy.test.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
@@ -37,7 +38,8 @@ category.members.org.eclipse.emf.emfstore.source=org.eclipse.emf.emfstore.client
                                                  org.eclipse.emf.emfstore.ecp.source.feature, \
                                                  org.eclipse.emf.emfstore.migration.edapt.source.feature, \
                                                  org.eclipse.emf.emfstore.modelmutator.source.feature, \
-                                             	 org.eclipse.emf.emfstore.fuzzy.feature
+                                             	 org.eclipse.emf.emfstore.fuzzy.source.feature, \
+                                             	 org.eclipse.emf.emfstore.fuzzy.test.source.feature, \
 
 category.id.org.eclipse.emf.ecp.source=EMFClient Sources
 category.description.org.eclipse.emf.ecp.source=EMFClient Source Features.
